@@ -11,13 +11,22 @@ deck1 = cards.deckLVL1.copy()
 deck2 = cards.deckLVL2.copy()
 deck3 = cards.deckLVL3.copy()
 
-
+# Shuffle main decks
 random.shuffle(deck1)
 random.shuffle(deck2)
 random.shuffle(deck3)
 
+# Set tokens on table, for 2 players
 tableTokens = table.setTableTokens(2)
 
+
+# Set 3 nobles on the table
+noblesDeck = nobles.noblesDeck
+random.shuffle(noblesDeck)
+tableNobles = noblesDeck[0:3]
+
+
+#Prepare face up cards
 faceUpLv1Cards, tableDeck1 = table.setFaceUpCards(deck1)
 
 
@@ -61,6 +70,48 @@ def purchaseCard(player, card, tableTokens, faceUpCards, sourceDeck):
 
     return player, tableTokens, faceUpCards, sourceDeck
 
+def canCollectNoble(player, aNoble):
+    playerCards = player.getCardCount()
+    nobleRequirements = aNoble.requirements
+    for color in nobleRequirements.keys():
+        if nobleRequirements[color] > playerCards[color]:
+            return False
+
+    print(f'{player.name} wins the favour of {aNoble.name}')    
+    return True
+
+def collectNoble(player, noblesDeck):
+    favoringNobles = []
+    if noblesDeck:
+        for noble in noblesDeck:
+            if canCollectNoble(player, noble):
+                favoringNobles.append(noble)
+        if favoringNobles:
+            if len(favoringNobles) == 1:
+                print(f'{player.name} has gained the favour of {favoringNobles[0].name}!')
+                player.addNoble(favoringNobles[0])
+                noblesDeck.pop(favoringNobles[0])
+                return player, noblesDeck
+            elif len(favoringNobles) > 1:
+                nobleNames = [noble.name for noble in favoringNobles]
+                print('You have gained the favour of multiple nobles!')
+                print('They are:')
+                for nobleName in nobleNames:
+                    print(nobleName)
+                print('You may only accept the favour of one noble at a time.')
+                print('Enter the number of the noble you want to accept this turn.')
+                for number, noble in enumerate(nobleNames):
+                    print(f'{number+1}: {noble}')
+                selectedNoble = int(input('...') -1)
+                player.addNoble(favoringNobles[selectedNoble])
+                noblesDeck.pop(selectedNoble)
+                return player, noblesDeck
+        else:
+            print('You must gain more reknown before the nobles will favour you.')
+            return player, noblesDeck
+    else:
+        print('The nobles are all spoken for.')
+
 # print(len(deck1))
 # tableLv1Cards = setTableCards(deck1)
 # print(len(deck1))
@@ -71,27 +122,27 @@ def purchaseCard(player, card, tableTokens, faceUpCards, sourceDeck):
 
 # # Testing the player purchase cards functions:
 
-print('The player has the following cards:')
-print(player1.cards)
-print('The player has the following tokens')
-print(player1.tokens)
-print('There are the following cards on the table:')
-for number, card in enumerate(faceUpLv1Cards):
-    print(f'\t{number}: {card}')
-print('The player will now buy a card.')
-player1, tableTokens, faceUpLv1Cards, tableDeck1 = purchaseCard(player1, faceUpLv1Cards[1], tableTokens, faceUpLv1Cards, tableDeck1)
-print('The player now has the following cards:')
-print(player1.cards)
-print('And the following tokens.')
-print(player1.tokens)
-print('And now the face up cards are as follows:')
-for number, card in enumerate(faceUpLv1Cards):
-    print(f'\t{number}: {card}')
+# print('The player has the following cards:')
+# print(player1.cards)
+# print('The player has the following tokens')
+# print(player1.tokens)
+# print('There are the following cards on the table:')
+# for number, card in enumerate(faceUpLv1Cards):
+#     print(f'\t{number}: {card}')
+# print('The player will now buy a card.')
+# player1, tableTokens, faceUpLv1Cards, tableDeck1 = purchaseCard(player1, faceUpLv1Cards[1], tableTokens, faceUpLv1Cards, tableDeck1)
+# print('The player now has the following cards:')
+# print(player1.cards)
+# print('And the following tokens.')
+# print(player1.tokens)
+# print('And now the face up cards are as follows:')
+# for number, card in enumerate(faceUpLv1Cards):
+#     print(f'\t{number}: {card}')
 
-print("The player's card buying power is now:")
-print(player1.getCardCount())
-print("And the player's total buying power is now:")
-print(player1.getCombinedWallet())
+# print("The player's card buying power is now:")
+# print(player1.getCardCount())
+# print("And the player's total buying power is now:")
+# print(player1.getCombinedWallet())
 
 #Testing the player picking up tokens functions
 
@@ -102,3 +153,7 @@ print(player1.getCombinedWallet())
 # print(player1.tokens)
 # print('And there are now the following tokens on the table:')
 # print(tableTokens)
+
+print('The nobles present in this game are:')
+for noble in tableNobles:
+    print(f'\t{noble.name}')
